--- a/Logistics/manage/staff_warrant.html
+++ b/Logistics/manage/staff_warrant.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -38,7 +38,7 @@
                 
                     <ul class="zbshangjia-ul">
                         <li class="shangjia-li1">
-                            <a href="staff_share.html" class="row">
+                            <a href="staff_share.html?id=1" class="row">
                                 <div class="col-30 shangjia-left">
                                     <span class="iconfont icon-truck" style="color: #a3c478;"></span>
                                 </div>
@@ -51,7 +51,7 @@
                             </a>
                         </li>
                         <li class="shangjia-li2">
-                            <a href="staff_share.html" class="row">
+                            <a href="staff_share.html?id=2" class="row">
                                 <div class="col-30 shangjia-left">
                                     <span class="iconfont icon-bar-chart" style="color: #c4594b;"></span>
                                 </div>
@@ -64,7 +64,7 @@
                             </a>
                         </li>
                         <li class="shangjia-li3">
-                            <a href="staff_share.html" class="row">
+                            <a href="staff_share.html?id=3" class="row">
                                 <div class="col-30 shangjia-left">
                                     <span class="iconfont icon-codepen" style="color: #b160b3;"></span>
                                 </div>
@@ -77,7 +77,7 @@
                             </a>
                         </li>
                         <li class="shangjia-li3">
-                            <a href="staff_share.html" class="row">
+                            <a href="staff_share.html?id=4" class="row">
                                 <div class="col-30 shangjia-left">
                                     <span class="iconfont icon-twitch" style="color: #7d7d7d;"></span>
                                 </div>
@@ -90,7 +90,7 @@
                             </a>
                         </li>
                         <li class="shangjia-li3">
-                            <a href="staff_share.html" class="row">
+                            <a href="staff_share.html?id=5" class="row">
                                 <div class="col-30 shangjia-left">
                                     <span class="iconfont icon-slideshare" style="color: #ff0000;"></span>
                                 </div>
@@ -116,6 +116,15 @@
         $(function () {
             $.init();
             $.config = { router: false }
+        });
+
+        PageInit(function () {
+            GetHTML("GetPositionList", {}, function (data) {
+                if (CheckHTMLData(data))
+                {
+
+                }
+            });
         });
     </script>
 
