--- a/Logistics/manage/manage_warrant.html
+++ b/Logistics/manage/manage_warrant.html
@@ -94,13 +94,26 @@
                                 </div>
                             </a>
                         </li>
-                        <li class="shangjia-li2" style="margin-bottom:0;">
+                        <li class="shangjia-li1">
                             <a href="staff_warrant.html" class="row">
                                 <div class="col-30 shangjia-left">
                                     <span class="iconfont icon-traffic" style="color: #b160b3;"></span>
                                 </div>
                                 <div class="col-50 shangjia-center">
                                     员工授权
+                                </div>
+                                <div class="col-20 shangjia-right">
+                                    <span class="iconfont icon-gengduo"></span>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="shangjia-li2" style="margin-bottom:0;">
+                            <a href="user_share.html" class="row">
+                                <div class="col-30 shangjia-left">
+                                    <span class="iconfont icon-users" style="color:#DE7044;"></span>
+                                </div>
+                                <div class="col-50 shangjia-center">
+                                    用户授权
                                 </div>
                                 <div class="col-20 shangjia-right">
                                     <span class="iconfont icon-gengduo"></span>
