最新物流数据

--- a/Logistics/manage/index.html
+++ b/Logistics/manage/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -28,11 +28,11 @@
             </header>
 
             <nav class="bar bar-tab">
-                <a class="tab-item external " href="../business/index.html">
+                <a class="tab-item external " href="/LC/MenuBar/LC_BusinessIndex.aspx">
                   <span class="icon iconfont icon-filetexto"></span>
                   <span class="tab-label">物流业务</span>
               </a>
-                <a class="tab-item external" href="../count/index.html">
+                <a class="tab-item external" href="/LC/MenuBar/OperationCountIndex.aspx">
                   <span class="icon iconfont icon-fcstubiao19"></span>
                   <span class="tab-label">运营统计</span>
               </a>
@@ -40,7 +40,7 @@
                   <span class="icon iconfont icon-guanli"></span>
                   <span class="tab-label">物流管理</span>
               </a>
-                <a class="tab-item external" href="../user/index.html">
+                <a class="tab-item external" href="/LC/MenuBar/Personal.aspx">
                   <span class="icon iconfont icon-user-circle"></span>
                   <span class="tab-label">我的</span>
               </a>
